# sprouts-regex-tool

./: .gitignore  file.py  file.py~  markdown_table.py  old_script.py  pyproject.toml  regex_pattern_collections.py  requirements.txt  sample_data_01.txt  setup.py  sprouts_parser.py
config/: logging_conf.json
data/: sample.txt  sample2.txt  sample_data_02.txt
data/report/: full_table_report.txt  table_values.txt
data/report/individual_tables/all_values/: table_report.csv  table_report.md  table_report.txt  table_report.xlsx
data/report/individual_tables/differences_symmetric/: table_report.csv  table_report.md  table_report.txt  table_report.xlsx
data/report/individual_tables/duplicate_values/: table_report.csv  (+3 more)
data/report/original_table/: table_report.csv  table_report.md  table_report.txt  table_report.xlsx
docs/: .env.template
parser/: data.py
regex/: regex_file.py  regex_pattern.py  regex_search.py
src/sprouts/: __init__.py  cli.py  main.py  menu.py  sprouts_parser.py
src/sprouts/data/: patterns.json  sample_data.txt  sample_data_02.txt  sample_data_03.txt
src/sprouts/parser/: __init__.py  sprouts_parser.py  tables.py
src/sprouts/regex/: __init__.py  regex_collections.py  regex_utils.py
src/sprouts/sprouts_session/: __init__.py  sprouts_parser.py
src/sprouts/tables/: __init__.py  markdown_table.py  table_organizer.py
src/sprouts/utils/: __init__.py  data_utils.py  file_utils.py  regex.py
src/sprouts_tool/: logger_init.py  main.py
src/sprouts_tool/parser/: __init__.py  sprouts_parser.py
src/sprouts_tool/utils/: file_utils.py
(+4 files in other folders)
