[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="sprouts-tool"
version="0.1.0"
description="A tool for parsing and manipulating shipments and scan shipments for sprouts"
authors=[{name="Austin Kaufman", email="devguyrash@gmail.com"}]
dependencies = [
    "et-xmlfile==1.1.0",
    "numpy==1.26.1",
    "openpyxl==3.1.2",
    "pandas==2.1.2",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "six==1.16.0",
    "tabulate==0.9.0",
    "tzdata==2023.3"
]
